# WebServices

./: .gitignore  CMakeLists.txt
ChatRoom/: main.cpp
cpp_projects/: CMakeLists.txt  HowToInstallDependencies.md
cpp_projects/ChatRoom/: CMakeLists.txt  main.cpp
cpp_projects/UserRegistrationnode/: CMakeLists.txt  HowToInstallDependencies.md
cpp_projects/UserRegistrationnode/src/: main.cpp
cpp_projects/userver_viability_check/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
json-api/: ExternalDeps.md  HowToInstallDeps.md  build.py  conf.py  downloadcsv.py  go.mod  initgoproject.py  initprod.py  main.go  postgresrun.py  run.py  stop.py  un1234.go
json-api/DataStructures/: DataStructures.go
json-api/DevNotes/: postgre.md
json-api/DevNotes/examples/: sqlite.md
json-api/GoConf/: GoConf.go
json-api/NodeStorage/: NodeStorage.go
json-api/Storage/: StorageAPI.go
json-api/api/: api_server.go
json-api/cmd_ui/: rendering.go
